refactor: 分布式锁收拢 framework + userId 上移 Web 边界 + 各模块精简，文档拆至 doc/agents（2026-08-12 收口）
YAGNI 裁剪（ai PromptRenderer/SearchToolKind、order/payment 自有锁、OrderUserInfoAdapter 等 14 文件删除）；admin 查询端口拆分；payment 死代码（PaymentConfigDO/Mapper/Response）清除；doc/agents + docs/agents 承接 AGENTS.md 拆分内容；全部文档 Port 计数对齐工程指标口径 35